# rust-histogram-benchmark

./: Cargo.toml  README.md  run.sh  rustfmt.toml
.github/workflows/: ci.yaml
benches/: histogram_bench.rs
results/: bench-atomichistogram.json  bench-base2histogram.json  bench-ckms.json  bench-ddsketch.json  bench-gk.json  bench-h2histogram.json  bench-hdrhistogram-3.json  bench-hdrhistogram.json  bench-kllsketch.json  bench-metrics-summary.json  bench-quantogram.json  bench-reqsketch.json  bench-sparsehistogram.json  bench-tdigest.json  charts-less-efficient.html  charts.html  highlights.md  report.md
src/: alloc_tracker.rs  bench_harness.rs  distributions.rs  lib.rs  output.rs
