[package]
name = "rust-histogram-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmark for Histogram implementations in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drmingdrmer/rust-histogram-benchmark"
homepage = "https://github.com/drmingdrmer/rust-histogram-benchmark"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "histogram_bench"
harness = false
