[package]
name = "rust-histogram-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmark for Histogram implementations in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drmingdrmer/rust-histogram-benchmark"
homepage = "https://github.com/drmingdrmer/rust-histogram-benchmark"

[dependencies]
base2histogram = "0.2.2"
hdrhistogram = "7.5.4"
histogram = "1.0.0"
quantogram = "0.4.4"
sketches-ddsketch = "0.4.0"
tdigest = "0.2.3"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "bench-base2histogram"
path = "src/bin/bench_base2histogram.rs"

[[bin]]
name = "bench-hdrhistogram"
path = "src/bin/bench_hdrhistogram.rs"

[[bin]]
name = "bench-h2histogram"
path = "src/bin/bench_h2histogram.rs"

[[bin]]
name = "bench-hdrhistogram-3"
path = "src/bin/bench_hdrhistogram_3.rs"

[[bin]]
name = "bench-quantogram"
path = "src/bin/bench_quantogram.rs"

[[bin]]
name = "bench-ddsketch"
path = "src/bin/bench_ddsketch.rs"

[[bin]]
name = "bench-tdigest"
path = "src/bin/bench_tdigest.rs"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[[bin]]
name = "gen-charts"
path = "src/bin/gen_charts.rs"
